# Messanger-RestApi

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
migrations/: 001_init.sql
scripts/: seed.py
src/context/: AuthContext.h
src/domain/: Chat.h  ChatMember.h  Message.h  Session.h  User.h
src/exceptions/: exceptions.h  repository_exceptions.h  service_exceptions.h
src/handler/: AuthHandler.cpp  AuthHandler.h  ChatHandler.cpp  ChatHandler.h  FactoryHandler.h  MessageHandler.cpp  MessageHandler.h  UserHandler.cpp  UserHandler.h
src/helpers/: PasswordHasher.h  ResponseUtils.h
src/logger/: Logger.cpp  Logger.h
src/middleware/: AuthMiddleware.cpp  AuthMiddleware.h
src/migrations/: Migrator.h
src/repository/: FactoryRepository.h  IChatMemberRepository.h  IChatRepository.h  IMessageRepository.h  ISessionRepository.h  IUserRepository.h
src/repository/postgres/: ChatMemberRepository.cpp  ChatMemberRepository.h  ChatRepository.cpp  ChatRepository.h  MessageRepository.cpp  MessageRepository.h  SessionRepository.cpp  SessionRepository.h  UserRepository.cpp  UserRepository.h
src/service/: AuthService.cpp  AuthService.h  ChatService.cpp  ChatService.h  FactoryService.h  MessageService.cpp  MessageService.h  UserService.cpp  UserService.h
